# CogniTrace-AI-Tutor-for-AI-Assisted-Coding

./: .dockerignore  .gitignore  ARCHITECTURE.md  FEATURE-IDEA.md  FEATURE-IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  PHASE2_FRONTEND_IMPLEMENTATION_GUIDE.md  PHASE2_IMPLEMENTATION_PROMPT.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_IMPLEMENTATION_PLAN.md  README.md  ROADMAP-TO-9.md  ROADMAP.md  RUNNING.md  SPEC.md  SPEC_BRAINSTORM.md  codescope_analysis.md  codescope_prd.md  docker-compose.yml  research_report.md
backend/: .coverage  .env.example  Dockerfile  Dockerfile.production  commit_msg.txt  debug_branch_detect.py  debug_bytecode.py  debug_bytecode2.py  debug_call_events.py  debug_detect.py  debug_events.py  debug_events2.py  debug_failing.py  debug_for_branch.py  debug_forloop.py  debug_forloop2.py  debug_func_return.py  debug_func_trace.py  debug_if_trace.py  debug_ops.py  debug_positions.py  debug_ternary_events.py  debug_ternary_return.py  debug_ternary_trace.py  debug_trace.py  debug_trace2.py  debug_trace3.py  main.py  make_due.py  make_pro.py  pyproject.toml  requirements.txt  test_import.py  test_supabase.py
backend/analyzers/: static_analysis.py
backend/api/: routes.py
backend/app/: concurrency.py  config.py  dependencies.py  main.py
backend/codescope_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/migrations/: V001__initial_schema.sql  V002__examples_table.sql  V003__examples_seed_data.sql  V004__add_explanation_ratings.sql  V005__anonymous_events.sql  V006__fix_rls_policies.sql  V007__optimize_rls_policies.sql  (+2 more)
(+159 files in other folders)
