[project]
name = "codescope-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "structlog>=24.0.0",
    "sse-starlette>=2.0.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.0",
    "bcrypt>=4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
include = ["app*", "tracer*", "analyzers*"]
exclude = ["tests*", "migrations*"]
